--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^4.17.3",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
     "fetch-jsonp": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
