--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "fetch-jsonp": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-route": "^1.0.3",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2"
   },
