--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
     "fetch-jsonp": "^1.2.1",
+    "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
