--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
+    "caniuse-lite": "^1.0.30001346",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "cra-template": "1.1.2",
     "css-loader": "4.3.0",
@@ -62,6 +63,7 @@
     "react-route": "^1.0.3",
     "react-router-dom": "^6.0.2",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.0.5",
