--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "cra-template": "1.1.2",
     "css-loader": "4.3.0",
+    "dayjs": "^1.11.3",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.11.0",
@@ -43,6 +44,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
